# icosphere

./: .gitignore  Example_in_matplotlib.ipynb  Example_in_plotly.ipynb  README.md  example_in_matplotlib.py  icosphere.py  pyproject.toml  setup.py  test_icosphere.py
