[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icosphere"
version = "0.1.4"
description = "Creates a geodesic icosahedron given a subdivision frequency."
readme = "README.md"
license = "lgpl-2.1"
authors = [
    { name = "Vedrana Andersen Dahl", email = "vand@dtu.dk" },
]

dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/vedranaa/icosphere"

[tool.hatch.build.targets.sdist]
include = [
    "icosphere.py",
]
